Modularizzazione e swagger
